erDiagram
    products }o--|| users: ""
    goods }o--|| products: ""
    comments }o--|| products: ""
    comments }o--|| users: ""
    category_product }o--|| products: ""
    category_product }o--|| categories: ""
    users ||--|| profiles: ""
    purchases ||--o| products: ""
    users    ||--o{ purchases : ""
    goods }o--|| users: ""
    products {
        bigint   id PK
        bigint    user_id  FK
        varchar(255)  img_url
        varchar(255)  product_name
        varchar(255)  brand_name
        int   price
        text  explanation
        int    condition
        timestamp created_at
        timestamp updated_at
    }

    users {
        bigint       id PK
        varchar(255) name
        varchar(255) email
        timestamp    email_verified_at
        varchar(255) password
        tinyint is_profile_completed
        varchar(100) remember_token
        timestamp    created_at
        timestamp    updated_at
    }

    goods {
        bigint   id PK
        bigint   product_id  FK
        bigint   user_id  FK
        timestamp    created_at
        timestamp    updated_at
    }

    comments {
        bigint   id PK
        bigint   product_id  FK
        bigint   user_id  FK
        varchar(255)    comment
        timestamp    created_at
        timestamp    updated_at
    }

    categories {
        bigint  id  PK
        string  content
        timestamp    created_at
        timestamp    updated_at
    }

    category_product {
        bigint  id  PK
        bigint  product_id  FK
        bigint  category_id   FK
        timestamp    created_at
        timestamp    updated_at
    }

    profiles {
        bigint  id  PK
        bigint  user_id FK
        varchar(255)    postal_code
        varchar(255)    address
        varchar(255)    building
        varchar(255)    avatar
        timestamp    created_at
        timestamp    updated_at
    }

    purchases {
        bigint  id  PK
        bigint  product_id  FK
        bigint  user_id  FK
        timestamp    created_at
        timestamp    updated_at
    }